objects/User.object
<CustomObject>
    <fields>
        <fullName>All_Costs_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Costs Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Batch_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Auto Batch Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <formula>&quot;Batch &quot; + TEXT(VALUE( Auto_Batch_Number__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Program_Level_Name__c</fullName>
        <formula>Contact.Account.ChannelProgramLevelName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Program Level Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomFIeld__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSP Custom FIeld</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Martin Manager</fullName>
                </value>
                <value>
                    <fullName>Maxwell Manager</fullName>
                </value>
                <value>
                    <fullName>Joe Manager</fullName>
                </value>
                <value>
                    <fullName>Mina Manager</fullName>
                </value>
                <value>
                    <fullName>Marie Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solution Engineer</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Demo Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guided Selling</fullName>
                    <default>true</default>
                    <label>Guided Selling</label>
                </value>
                <value>
                    <fullName>Search Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiagnosticToolEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable to run pricing diagnostics during a Quote Line Editor Calculate.</description>
        <inlineHelpText>Use to enable CPQ Diagnostic Tool, only available if org setting is enabled. Contact support to enable this capability.</inlineHelpText>
        <label>Enable Diagnostic Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Followed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Demo__c</fullName>
        <formula>&quot;SmartBytes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Demo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Show_Copado_Tips__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Copado Tips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Work_Manager_Panels__c</fullName>
        <description>JSON containing current user panels on the Backlog</description>
        <label>Work Manager Panels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dfsle__CanManageAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can Manage DocuSign Account</description>
        <label>Can Manage DocuSign Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Provisioned__c</fullName>
        <description>Date when the user was added to the account</description>
        <inlineHelpText>Date provisioned</inlineHelpText>
        <label>DocuSign Provisioned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dfsle__Status__c</fullName>
        <label>Docusign Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__Username__c</fullName>
        <description>DocuSign Username</description>
        <label>DocuSign Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Adm</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Approver__c</columns>
        <columns>Manager__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Approvers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approver__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Approvers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Buyer_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Buyer</value>
        </filters>
        <label>Buyer Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Request_Form_Users</fullName>
        <columns>CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_BY_NAME</field>
            <operation>equals</operation>
            <value>DE Integration</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_MONTH,THIS_MONTH</value>
        </filters>
        <label>Request Form Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>